fixed spacing bove card and flickering from toTop

--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -853,6 +853,7 @@ img {
 }
 
 .toHide {
+  position: fixed;
   visibility: hidden;
 }
 
@@ -974,10 +975,6 @@ img {
   .rating {
     width: 100%;
   }
-
-  .home-title {
-    margin-right: 80px;
-  }
 }
 
 /*PHONE*/
@@ -994,7 +991,6 @@ img {
 
   .itinerary-card {
     width: 300px;
-    margin-right: 30px;
   }
 
   .contact-card {
@@ -1153,15 +1149,6 @@ img {
   
   .comment-review {
     font-size: 11px;
-  }
-
-  .home-title {
-    font-size: large;
-    margin-left: 50px;
-  }
-
-  .itinerary-card-title {
-    font-size: x-large;
   }
 
 }
